Plugin Name: User Sync
Plugin Author: Cole(Incsub), Maniu(Incsub)

= 1.1.3 =
Added support for MP6
Small UI improvements

= 1.1.2 =
Enabled loading of CSS and JS file only on User Sync admin page
Increased sync actions priorities for improved compatibility with other plugins

= 1.1.1 =
Increased timeout for better syncing
Improved admin interface

= 1.1 =
All additional user meta data is now updated on sync
Fixed minor spelling issues